# YanagiZS

./: .gitignore  Cargo.toml  README.md
autopatch/: nap_test.txt
autopatch/design_data/NAP_Publish_AppStore_1.4/: config.json  encryption.json  serverlist.json
autopatch/design_data/beta_live/output_5016531_79764a0a26/client/StandaloneWindows64/oversea/: silence_revision  silence_version
autopatch/design_data/beta_live/output_5016531_79764a0a26/client/StandaloneWindows64/oversea/ServerOnlyData/: MainCity_1.json
autopatch/game_res/beta_live/output_5016531_79764a0a26/client/StandaloneWindows64/oversea/: audio_version  data_version  res_version
crates/autopatch-server/: Cargo.toml  autopatch.toml
crates/autopatch-server/src/: main.rs
crates/common/: Cargo.toml
crates/common/src/: db_const.rs  lib.rs  logging.rs
crates/common/src/config/: app.rs  encryption.rs  local_toml.rs  mod.rs  server_list.rs
crates/dispatch-server/: Cargo.toml  dispatch.toml
crates/dispatch-server/src/: http_handlers.rs  main.rs
crates/dispatch-server/src/data/: gateway.rs  global.rs  mod.rs
crates/game-server/: Cargo.toml  gameserver.toml
crates/game-server/src/: database.rs  main.rs  player_util.rs  remote_config.rs  scene_section_util.rs
crates/game-server/src/level/: event_graph_runner.rs  mod.rs
crates/game-server/src/rpc_ptc/: abyss.rs  activity.rs  arcade.rs  babel_tower.rs  battle_pass.rs  camp_idle.rs  daily_challenge.rs  embattles.rs  gacha.rs  hadal_zone.rs  interact.rs  item.rs  main_city.rs  mod.rs  player.rs  quest.rs  shop.rs  social.rs  unlock.rs  vhs_store.rs  world.rs
crates/gate-server/: Cargo.toml  gateserver.toml
crates/gate-server/kcp/: Cargo.toml
crates/gate-server/kcp/src/: error.rs  kcp.rs  lib.rs
crates/gate-server/src/: database.rs  main.rs  remote_config.rs  session.rs  udp_server.rs
crates/gate-server/src/net/: kcp_conn_mgr.rs  mod.rs  packet_handler.rs  packet_processor.rs
crates/gate-server/src/packet/: control_packet.rs  mod.rs  net_packet.rs
crates/protocol/: Cargo.toml
crates/protocol/protocol-macros/: Cargo.toml
crates/protocol/protocol-macros/src/: lib.rs  polymorphic.rs  property_accessors.rs
crates/protocol/src/: action_info.rs  dungeon_info.rs  enums.rs  event_graph_info.rs  item_info.rs  lib.rs  player_info.rs  quest_info.rs  scene_ext.rs  scene_info.rs  util.rs
crates/qwer/: Cargo.toml
crates/qwer-rpc/: Cargo.toml
crates/qwer-rpc/qwer-client-example/: Cargo.toml
crates/qwer-rpc/qwer-client-example/src/: main.rs
crates/qwer-rpc/qwer-server-example/: Cargo.toml
crates/qwer-rpc/qwer-server-example/src/: main.rs
crates/qwer-rpc/src/: lib.rs  object_res_mini_mgr.rs
crates/qwer-rpc/src/protocol/: mod.rs  protocol_entity.rs  protocol_helper.rs  protocol_point.rs  protocol_service.rs  protocol_session.rs
crates/qwer-rpc/src/rpc_ptc/: middleware.rs  mod.rs  rpc_ptc_point.rs  rpc_ptc_service.rs
crates/qwer/qwer-derive/: Cargo.toml
crates/qwer/qwer-derive/src/: lib.rs  oct_data_derive.rs
crates/qwer/src/: lib.rs  oct_data.rs  property_data.rs  protocol_header.rs  protocol_stream.rs
crates/sdk-server/: Cargo.toml  sdk_server.toml
crates/sdk-server/html/: register.html  result.html
crates/sdk-server/src/: config.rs  main.rs  util.rs
crates/sdk-server/src/database/: mod.rs  schema.rs
crates/sdk-server/src/handlers/: combo_granter.rs  mdk_shield_api.rs  mod.rs  register.rs  risky_api.rs
crates/yanagi-data/: Cargo.toml  build.rs
crates/yanagi-data/blockfile/: Cargo.toml
crates/yanagi-data/blockfile/src/: lib.rs  magic.rs  unpack.rs  util.rs
crates/yanagi-data/fbs/: tables.fbs
crates/yanagi-data/gen_flatbuffers/: tables_generated.rs
crates/yanagi-data/src/: lib.rs
crates/yanagi-encryption/: Cargo.toml
crates/yanagi-encryption/src/: lib.rs  rsa.rs  xor.rs
crates/yanagi-encryption/src/ec2b/: mhy_aes.rs  mod.rs
crates/yanagi-eventgraph/: Cargo.toml  build.rs
crates/yanagi-eventgraph/src/: event_config.rs  lib.rs
crates/yanagi-http-client/: Cargo.toml
crates/yanagi-http-client/src/: lib.rs
crates/yanagi-proto/: Cargo.toml  build.rs
crates/yanagi-proto/src/: lib.rs
crates/yanagi-proto/yanagi-proto-derive/: Cargo.toml
crates/yanagi-proto/yanagi-proto-derive/src/: lib.rs
